--- a/site/layouts/partials/jumbotron.html
+++ b/site/layouts/partials/jumbotron.html
@@ -5,13 +5,13 @@
     <div class="db mb3">
       <img class="img" src="/img/logo_no_text.png" alt="My profile picture.">
 
-      <div class="mw7 relative bg-fix-primary mb3">
+      <div class="mw7 relative bg-fix-primary mb3 tl">
         <h1 class="f2 f1-l b di lh-title mb3 white mw6 bg-primary animated fadeIn">
         {{.title}}
         </h1>
 
       </div>
-      <div class="mw7 relative bg-fix-primary">
+      <div class="mw7 relative bg-fix-primary tl">
         {{ if .subtitle }}
         <p class="b f4 di lh-title mb3 white mw6 bg-primary animated fadeIn">
         {{.subtitle}}
