--- a/site/layouts/partials/jumbotron.html
+++ b/site/layouts/partials/jumbotron.html
@@ -1,9 +1,9 @@
-<div class="pv4 pv3-l ph3 bg-center cover">
+<div class="pv4 pv3-l ph3 bg-center cover left">
 
   <div class="mw7 center ph3">
 
     <div class="db mb3">
-      <img class="img" src="/img/logo_no_text.png" alt="My profile picture.">
+      <img class="img left-0" src="/img/logo_no_text.png" alt="My profile picture.">
 
       <div class="mw7 relative bg-fix-primary mb3 tl">
         <h1 class="f2 f1-l b di lh-title mb3 white mw6 bg-primary animated fadeIn">
