--- a/site/layouts/partials/newsletter-form.html
+++ b/site/layouts/partials/newsletter-form.html
@@ -5,15 +5,13 @@
     <p class="hidden">
       <label>Don’t fill this out if you're human: <input name="bot-field"></label>
     </p>
-    <legend class="f5 f4-ns mb1 black-80">Subscribe for updates:</legend>
-    <legend class="fw7 tc ">Keep me posted about:</legend>
-    <div class="flex items-center mb2 justify-center">
+    {{/* <div class="flex items-center mb2 justify-center">
       <input class="mr2" type="checkbox" id="projects" value="projects" name="projects">
       <div class="mr2"><label for="projects" class="lh-copy">We'll keep in touch about projects!</label> Upcoming Projects</div>
 
       <input class="mr2" type="checkbox" id="investing" value="investing" name="investing">
       <label for="investing" class="lh-copy">We'll keep in touch about investing!</label> Investing
-    </div>
+    </div> */}}
 
     <div class="cf">
       <label class="clip" for="email-address">Email Address</label>
