--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -4,8 +4,11 @@
 </section>
 <section id="cover">
   <div class="cover bg-left bg-center-l bg-primary white" style="background-image:url({{ string .Params.image | relURL }})">
-    <div class="mw5 mw7-ns center tc">
-      {{ partial "jumbotron" (dict "imageUrl" .Params.image "title" .Title "subtitle" .Params.subtitle) }} {{ partial "newsletter-form" . }}
+    <div class="mw5 mw7-ns center">
+      {{ partial "jumbotron" (dict "imageUrl" .Params.image "title" .Title "subtitle" .Params.subtitle) }}
+      <div class="pb4 pl3 animated fadeIn d-2">
+        {{ partial "newsletter-form" . }}
+      </div>
     </div>
   </div>
 </section>
@@ -36,12 +39,12 @@
 {{/*
 <section id="goals" class="mhn1-l ph3 center mw7 bg-half-baked br4 card-4">
   <h2 class="f2 b mb2">Our Goals</h2> {{ partial "4-column" .Params }}
-</section> */}}
-{{/* <section class="bg-warmwhite">
+</section> */}} {{/*
+<section class="bg-warmwhite">
   {{ partial "short-text" .Params.intro | markdownify }}
 </section> */}}
 
-<section id="mission" class="bg-half-baked">
+<section id="mission" class="bg-saffron">
   {{ partial "short-text" (dict "heading" .Params.values.heading "text" .Params.values.text "buttonText" "Read more" "buttonLink" "/values") }}
   </div>
 
@@ -85,29 +88,16 @@
   {{ partial "blog" . }}
 </section>
 
-<section id="video">
-<div class="mhn1-l center mw7">
 
-  <div class="w-100">
-
-    <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/281862263?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
-    {{/* <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
-      <iframe src="//player.vimeo.com/video/281862263" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-     </div> */}}
-  </div>
-</div>
-
-  <div class="bg-saffron">
+<div class="bg-saffron">
   <section id="contact" class="center cf pt4 pb2 mw8 center">
-  <div class="mhn1-l ph3 center mw7">
+    <div class="mhn1-l ph3 center mw7">
 
-      <h2 class="f2 b lh-title mb2">Contact</h2>
-
-        {{ partial "contact-form" . }}
+      <h2 class="f2 b lh-title mb2">Contact</h2> {{ partial "contact-form" . }}
 
 
-  </div>
-</section>
+    </div>
+  </section>
 
 
 
