--- a/site/layouts/partials/newsletter-form.html
+++ b/site/layouts/partials/newsletter-form.html
@@ -1,7 +1,7 @@
-<form class="pa2 pa4-l" netlify-honeypot="bot-field" name="subscribe" method="POST" netlify>
+<form netlify-honeypot="bot-field" name="subscribe" method="POST" netlify>
 
   <!-- <form class="mw4 center br2-ns" > -->
-  <fieldset class="cf ma0 pa0">
+  <fieldset class="cf">
     <p class="hidden">
       <label>Don’t fill this out if you're human: <input name="bot-field"></label>
     </p>
