--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -1,22 +1,23 @@
-<footer class="bg-primary ph3 pv4 white">
+<footer class="bg-primary white">
 
-	<div class="mw7 center pt3">
+	<div class="mw7 center pt1">
 
 		<div class="mw5 mw7-ns center tc">
 
-			<img src="/img/logo_no_text.png" alt="Raise Green logo" class="db w4 center mb4 br0">
 			<!-- <p class="f3 lh-title light-gray b tc mb2">Newsletter subscribe</p> -->
 			<!-- <p>Get awesome news from us in your inbox every two weeks. Be the first to learn about new projects.</p> -->
-
-			{{ partial "newsletter-form" . }}
-
+			{{/* <img src="/img/logo_no_text.png" alt="Raise Green logo" class="dib w4 h4 br0"> */}}
+			<img src="/img/logo_no_text.png" alt="Raise Green logo" class="dib w4 h4">
+			<div class="mb3">
+				{{ partial "newsletter-form" . }}
+			</div>
 		</div>
 
 
 		<div class="flex-ns justify-between">
 
 			<div>
-				<h3 class="f4 b lh-title mb1 gold" >RaiseGreen,Inc</h3>
+				<h3 class="f4 b lh-title mb1 gold">RaiseGreen,Inc</h3>
 				<ul class="mb3">
 					<li><a href="/" class="link">Home</a></li>
 					<li><a href="/#about" class="link">About</a></li>
@@ -39,8 +40,8 @@
 				<ul class="mhn2">
 					<!-- {{ partial "social-icon" (dict "link" "#" "svg" "icons-facebook") }} -->
 					<div class="mw5 mw7-ns center tc">
-					{{ partial "social-icon" (dict "link" "https://twitter.com/RaiseGreenInc" "svg" "icons-twitter") }}
-				</div>
+						{{ partial "social-icon" (dict "link" "https://twitter.com/RaiseGreenInc" "svg" "icons-twitter") }}
+					</div>
 					<!-- {{ partial "social-icon" (dict "link" "#" "svg" "icons-instagram") }}
 					{{ partial "social-icon" (dict "link" "#" "svg" "icons-vimeo") }}  -->
 				</ul>
