--- a/site/layouts/partials/jumbotron.html
+++ b/site/layouts/partials/jumbotron.html
@@ -1,26 +1,16 @@
-<div class="pv4 pv3-l ph3 bg-center cover left">
+<div class="pv2 pv1-l ph3 bg-center cover">
 
-  <div class="mw7 center ph3">
+  <img class="img animated fadeIn a2 d1" src="/img/logo_no_text.png" alt="My profile picture.">
 
-    <div class="db mb3">
-      <img class="img left-0" src="/img/logo_no_text.png" alt="My profile picture.">
-
-      <div class="mw7 relative bg-fix-primary mb3 tl">
-        <h1 class="f2 f1-l b di lh-title mb3 white mw6 bg-primary animated fadeIn">
+  <h1 class="f1-l f2 b forest-green mw7 animated fadeIn d2">
         {{.title}}
         </h1>
-
-      </div>
-      <div class="mw7 relative bg-fix-primary tl">
-        {{ if .subtitle }}
-        <p class="b f4 di lh-title mb3 white mw6 bg-primary animated fadeIn">
-        {{.subtitle}}
-        </p>
-        {{ end }}
-
-      </div>
-
-    </div>
+  <div class="mw7 tl dib v-btm">
+    {{ if .subtitle }}
+    <p class="b f4 di lh-title mb3 white mw6 bg-primary animated fadeIn d6">
+      {{.subtitle}}
+    </p>
+    {{ end }}
 
   </div>
 </div>
