--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -1,5 +1,5 @@
 <!-- <nav id="navbar" class="animated-shadow db w-100 flex b--black  items-center bg-white relative z-1 pv0-ns ph4-m ph6-l"> -->
-  <nav id="navbar" class="bg-saffron black tc center pv1 z-4">
+  <nav id="navbar" class="bg-primary white tc center pv0 z-4">
 
   <!-- <a class="dib growf6 f5-l dib mr3 mr4-l" href="#" title="Home">
     <img src="/img/EC_logo.svg" class="dib w2 h2" alt="Site Name">
@@ -10,7 +10,7 @@
 
 		<a href="#team" class="grow-large ph4-l ph3 no-underline dib f6 f5-l dib mr3 mr4-l">Team</a>
 
-		<a href="#board" class="growph4-l ph3 no-underline dib f6 f5-l dib mr3 mr4-l">Board</a>
+		<a href="#board" class="grow-large ph4-l ph3 no-underline dib f6 f5-l dib mr3 mr4-l">Board</a>
 
 	<!--	<a href="#projects" class="raise ph4-l ph3 no-underline dib f6 f5-l dib mr3 mr4-l">Projects</a> -->
 
@@ -18,12 +18,12 @@
 
     <a href="#contact" class="grow-large ph4-l ph3 no-underline dib f6 f5-l dib mr3 mr4-l">Contact</a>
 
-    <a class="link gray dib grow-large 2 w2 br-100 mr3 v-mid" href="https://twitter.com/RaiseGreenInc" title="">
+    {{/* <a class="link gray dib grow-large 2 w2 br-100 mr3 v-mid" href="https://twitter.com/RaiseGreenInc" title="">
       <svg data-icon="twitter" viewBox="0 0 32 32" style="fill:currentcolor">
         <title>twitter icon</title>
         <path d="M2 4 C6 8 10 12 15 11 A6 6 0 0 1 22 4 A6 6 0 0 1 26 6 A8 8 0 0 0 31 4 A8 8 0 0 1 28 8 A8 8 0 0 0 32 7 A8 8 0 0 1 28 11 A18 18 0 0 1 10 30 A18 18 0 0 1 0 27 A12 12 0 0 0 8 24 A8 8 0 0 1 3 20 A8 8 0 0 0 6 19.5 A8 8 0 0 1 0 12 A8 8 0 0 0 3 13 A8 8 0 0 1 2 4"></path>
       </svg>
-    </a>
+    </a> */}}
 
 
 </nav>
