--- a/src/css/imports/_variables.css
+++ b/src/css/imports/_variables.css
@@ -18,7 +18,7 @@
 	--mirage: #131D29;
 
 	/* Typography */
-	--font-family: Nunito Sans, -apple-system, BlinkMacSystemFont, 'avenir next', avenir, helvetica, 'helvetica neue', ubuntu, roboto, noto, 'segoe ui', arial, sans-serif;
+	--font-family: Nunito Sans, -apple-system, BlinkMacSystemFont, 'avenir next', avenir, helvetica, 'helvetica neue', ubuntu, roboto, noto, 'segoe ui', arial, serif;
 	--line-height: 1.5;
 
 	--font-size: 18px;
