--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -5,8 +5,8 @@
   </div>
 </section>
 <section id="cover">
-  <!-- <div class="cover bg-left bg-center-l bg-primary white" style="background-image:url({{ string .Params.image | relURL }})"> -->
-    <div class="mw5 mw7-ns center">
+   <div class="cover bg-left bg-center-l bg-primary white" style="background-image:url({{ string .Params.image | relURL }})">
+    <!--<div class="mw5 mw7-ns center"> -->
        {{ partial "jumbotron" (dict "imageUrl" .Params.image "title" .Title "subtitle" .Params.subtitle) }} 
       <div class="pb4 pl3 animated fadeIn d-2">
         {{ partial "newsletter-form" . }}
