--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -6,8 +6,7 @@
 </section>
 <section id="cover">
   <!-- <div class="cover bg-left bg-center-l bg-primary white" style="background-image:url({{ string .Params.image | relURL }})"> -->
-        <div class="cover bg-left bg-center-l bg-primary white" style="background:rgb(18, 31, 40))">
-
+        <div background:rgb(18, 31, 40)">
     <div class="mw5 mw7-ns center"> 
     <!-- {{ partial "jumbotron" (dict "imageUrl" .Params.image "title" .Title "subtitle" .Params.subtitle) }} -->
       {{ partial "jumbotron" (.Params.image "title" .Title "subtitle" .Params.subtitle) }}
