--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -6,7 +6,7 @@
 </section>
 <section id="cover">
   <!-- div class="cover bg-left bg-center-l bg-primary white" style="background-image:url({{ string .Params.image | relURL }})"-->
-  <div class="cover bg-left bg-center-l bg-primary white" style=".bg-navy { background-color: var(--navy); }>
+  <div class="cover bg-left bg-center-l bg-primary white" style="background-color: var(--navy)">
     
     <div class="mw5 mw7-ns center"> 
     {{ partial "jumbotron" (dict "imageUrl" .Params.image "title" .Title "subtitle" .Params.subtitle) }} 
